# OCR

docstrange/: .gitignore  CLAUDE.md  LICENSE  README.md  analyze_document.py  app.py  dify_skill.yaml  drawing_data.csv  drawing_data.md  example.py  fastapi_app.py  process_drawing_data.py  pyproject.toml  server.py  skills.md
docstrange/docstrange/: WEB_INTERFACE.md  __init__.py  app.py  cli.py  config.py  exceptions.py  extractor.py  result.py  web_app.py
docstrange/docstrange-extractor/: skill.md
docstrange/docstrange/pipeline/: __init__.py  layout_detector.py  model_downloader.py  nanonets_processor.py  neural_document_processor.py  ocr_service.py
docstrange/docstrange/processors/: __init__.py  base.py  cloud_processor.py  docx_processor.py  excel_processor.py  gpu_processor.py  html_processor.py  image_processor.py  pdf_processor.py  pptx_processor.py  txt_processor.py  universal_processor.py  url_processor.py
docstrange/docstrange/services/: __init__.py  auth_service.py  ollama_service.py
docstrange/docstrange/static/: script.js  styles.css
docstrange/docstrange/templates/: index.html
docstrange/docstrange/utils/: __init__.py  gpu_utils.py
docstrange/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
docstrange/frontend/src/: App.jsx  index.css
docstrange/frontend/src/context/: NotificationContext.jsx  ThemeContext.jsx
docstrange/frontend/src/hooks/: useDocumentProcessor.js
docstrange/mcp_server_module/: README.md  __init__.py  __main__.py  claude_desktop_config.json  server.py
docstrange/output/: Avionics Harnessoutput.csv  Avionics Harnessoutput.md  Radar Mountoutput.csv  Radar Mountoutput.md  Sample Drawing (1)output.csv  Sample Drawing (1)output.md  Screwoutput.csv  Screwoutput.md  Spaceroutput.csv  Spaceroutput.md
docstrange/outputs/: 07afa13f-30a8-4083-b568-6fae498c06f1.csv  07afa13f-30a8-4083-b568-6fae498c06f1.json  082b1192-c166-46c6-8f8c-12577af88c75.csv  082b1192-c166-46c6-8f8c-12577af88c75.json  0e3f8254-0dc2-4d45-b2b6-bcbcbff5d86f.csv  0e3f8254-0dc2-4d45-b2b6-bcbcbff5d86f.json  1244582e-f263-4ad7-be74-733dfa93e49c.csv  1244582e-f263-4ad7-be74-733dfa93e49c.json  1391088d-1bd0-49e8-8617-e42a1875d0b1.csv  155294ff-cb04-4a71-816b-660c0236f48f.csv  155294ff-cb04-4a71-816b-660c0236f48f.json  1df199f6-af35-434d-9934-3935752a11f5.csv  1df199f6-af35-434d-9934-3935752a11f5.json  2c697a06-2ec0-4016-b7db-bce95f1656c1.csv  2ce1a455-cd55-4234-ba7d-cd135008837b.csv  2ce1a455-cd55-4234-ba7d-cd135008837b.json  2ec58252-4e59-4434-8c1f-9ee220b5f80f.csv  2ec58252-4e59-4434-8c1f-9ee220b5f80f.json  358d9d0e-e002-45c5-9525-d37cb0b0fbab.csv  358d9d0e-e002-45c5-9525-d37cb0b0fbab.json  3c144d89-f581-430f-8b04-e9bef935bf0b.csv  3c144d89-f581-430f-8b04-e9bef935bf0b.json  3db66128-8c4d-4de9-86ac-722c6ac41240.csv  3db66128-8c4d-4de9-86ac-722c6ac41240.json  40f96426-251c-473c-b90a-56b1357402bb.csv  40f96426-251c-473c-b90a-56b1357402bb.json  49d3f5af-3960-4c1a-8c9d-0934ea00e031.csv  49d3f5af-3960-4c1a-8c9d-0934ea00e031.json  4ec47823-de1a-4adb-aa51-1c8c725e7fd7.csv  4ec47823-de1a-4adb-aa51-1c8c725e7fd7.json  50719558-a2e6-4e64-a945-51944856f607.csv  50719558-a2e6-4e64-a945-51944856f607.json  5bccc259-e9e2-4755-ab90-c9ebc1ceaa20.csv  5bccc259-e9e2-4755-ab90-c9ebc1ceaa20.json  619c5acd-3727-4277-94fa-e3033546b03d.csv  619c5acd-3727-4277-94fa-e3033546b03d.json  63c265b1-dc70-4e8f-87f3-3d6bfc1dd7f7.csv  6671b44b-74e3-4bce-913e-733a4ab60e9b.csv  689f4590-83ea-4231-9bfe-b64c50af6cce.csv  689f4590-83ea-4231-9bfe-b64c50af6cce.json  (+32 more)
docstrange/scripts/: README.md  __init__.py  prepare_s3_models.py  setup_dev.py  setup_environment.sh
docstrange/tests/: debug_ocr.py  debug_ocr_provider.py  test_advanced_ocr.py  test_cloud_mode.py  test_converter.py  test_enhanced_layout.py  test_enhanced_library.py  test_enhanced_pdf_processor.py  test_html_generation.py  test_json_structure.py  test_ocr_with_real_image.py  test_real_files.py  test_real_files_enhanced.py  test_real_json_conversion.py
(+18 files in other folders)
